lab1/Test/L1-A-10-70.output
Error Type A at Line 2
Error Type A at Line 3
Error Type B at Line 8
Error Type A at Line 15
Error Type A at Line 24
Error Type B at Line 29
Error Type A at Line 41
