lab1/Test/L1-A-10-70.cmm
int Sw0I59WIUqyh ( ) {
  float WA4cV1o2jRz6r ^[ 1472403581 ] ;
}~
struct satTfZ8hMVsNLN_p ;
int BstgtYwWACb7ZeLm3YIp 
;
struct xo4TdXlgzr1ON {
/   int IPiYpxYGW4bJ2G_8Uwr ;
  int G , ipi = W5gHiNHn || ffO4x && o9jzMQWjPabUHz 
    < AOohW__teaagDxzeiu * IE0jIb1WcRxHc2EIMA ( cwG7IW8cQgjtfT0bpZu 
    = vo_yF4wXCKC70Gu == xd7vQpHmaY7 - r / ! - rDBfD2B8IfxNiPca 
    [ LermIEKHsZ6tWy95CG || ! ! tkrxgSh1QLw [ c41y0wIskv 
    = ptmMbkJKksE4U75T > - ! - XjKfU5MMz ( wD , sKm4jwcy9h46N1k 
    = SEycjSVpqp2Y = NCc4p7SpYgcx2_Ap8cCf != ! - ( HAxBMMR_ 
    && c99SH %<= lRnMWPNamFttctagmi ) . L5 ) ] * 276676648 
    + EY4ERELS >= ! - qEaYxcjo2exlfwSw0S1a ( ) + - 511920897.830130796 
    ] ) . G6rRKH9G3KINHNWUPcZv ;
};
struct _PlqRvJrC ;
int ;
int ;
int ;
int Ik1VbYP ( int BOXCxdoDqlZ5oSE8AWxZ , int DARHwAFFcJHl 
  ) &{
  mgRXURuP7XnLJk8fEco ;
  while ( oEuZt9Dcha8eGIAMY6FY ) {
    if ( lpHbCN5AJHfm )     z ;
else     if ( H1RFrPuD2 )     if ( BTF6K )     return 
      Z7OuO float ;
else     ma5xqhUqDoFzVOlN5Sv4 ;



  }
}
struct {
}cJ , Tu6kC4 

;
int ;
%